新增文章：云闪付 APP 打不开竟然是因为 CFCA 证书的问题；其他优化

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "轻雨Purainty的小站",
-  "description": "轻雨Purainty的个人网站",
+  "name": "轻雨Purainity的小站",
+  "description": "轻雨Purainity的个人网站",
   "version": "1.0.0",
   "license": "MIT",
   "type": "module",
